--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -19,7 +19,7 @@ Site wide colors from Virginia Tech
     --vt-impactOrange: #ca4f00;
   }
 
-  /* 
+/* 
 * general
 */
 * {
@@ -34,3 +34,67 @@ Site wide colors from Virginia Tech
     height: 100%;
     margin: 0;
   }
+
+/* 
+* User Page
+*/
+
+.user-page {
+    padding: 5px;
+}
+
+.user-page h2 {
+    text-align: center;
+    font-size: 24px;
+    margin-bottom: 20px;
+}
+
+.user-table table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.user-table th {
+    border: 1px solid #ddd;
+    padding: 5px;
+    text-align: center;
+}
+
+.user-table td {
+    border: 1px solid #ddd;
+    padding: 5px;
+    text-align: left;
+}
+
+.user-table th {
+    background-color: #f2f2f2;
+}
+
+.user-table select {
+    width: 100%;
+    padding: 5px;
+    font-size: 16px;
+}
+
+.user-table select:focus {
+    outline: none;
+}
+
+.user-table select option {
+    padding: 5px;
+}
+
+.user-page button {
+    padding: 15px 30px;
+    background-color: var(--vt-maroon);
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    display: block;
+    margin: 20px auto;
+}
+
+.user-page button:hover {
+    background-color: #770a0a;
+}
