--- a/frontend/src/components/TeamStandingRow/TeamStandingRow.css
+++ b/frontend/src/components/TeamStandingRow/TeamStandingRow.css
@@ -1,18 +1,19 @@
-.profile_summary {
+.team_profile_summary {
   display: grid;
   grid-template-columns: 4fr 2fr 1fr;
   grid-gap: 10px;
-  background-color: #777;
-  color: white;
+  background-color: var(--vt-maroon);
+  color: #f1f1f1;
   padding: 18px;
   width: 100%;
   border: none;
   outline: none;
-  font-size: 15px;
+  font-size: 16px;
 }
 
 .collapsible:after {
   content: '\002B';
+
 }
 
 .active:after {
@@ -20,14 +21,19 @@
 }
 
 .content {
+  display:grid;
   padding: 0 18px;
   max-height: 0;
   overflow: hidden;
+  color: #f1f1f1;
   transition: max-height 0.2s ease-out;
-  background-color: #f1f1f1;
+  background-color: var(--vt-burntOrange);
+  border: 2px solid black;
+  font-size: 16px;
 }
 
 .inner_content {
   display: grid;
   grid-template-columns: 4fr 2fr;
+  padding-bottom: 10px;
 }
